<resources>
    <string name="app_name">Level 4 - Task 2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="play_fragment_label">Play Fragment</string>
    <string name="history_fragment_label">History Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello play fragment</string>
    <string name="hello_second_fragment">Hello history fragment. Arg: %1$s</string>
    <string name="title">Welcome</string>
    <string name="sub_title">Introduction: select rock, paper or scissors to play</string>
    <string name="vs">V.S.</string>
    <string name="you">You</string>
    <string name="computer">Computer</string>
    <string name="win">You won!</string>
    <string name="draw">Draw</string>
    <string name="loss">Computer won!</string>
    <string name="your_history">Your game history</string>
    <string name="pick_a_hand">Choose your hand</string>
    <string name="stats_intro">Your all time stats: (total of %d games)</string>
    <string name="stats">Wins: %d  | Draws: %d  |  Losses: %d</string>


</resources>